<resources>
    <string name="appName">Produtos CRUD</string>
    <string name="headLine">APP</string>
    <string name="slogan">CRUD</string>
    <string name="titleMain">Lista de Produtos</string>
    <string name="titleDetail">Detalhe do Produto</string>
    <string name="hint_user">Nome do Usuário</string>
    <string name="hint_password">Senha</string>
    <string name="hint_administrator">Administrador</string>
    <string name="hint_name">Nome Completo</string>
    <string name="hint_email">E-mail</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTRAR</string>
    <string name="btn_link_to_register">Não é um membro? Inscreva-se agora.</string>
    <string name="btn_link_to_login">Já registrou! Logar aqui.</string>
    <string name="welcome">Bem Vindo</string>
    <string name="btn_logout">Sair</string>
    <string name="btn_edit">Editar</string>
    <string name="btn_delete">Deletar</string>
    <string name="btn_save">Salvar</string>
    <string name="btn_cancel">Cancelar</string>
    <string name="name">Nome Completo</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="open_drawer">Abrir</string>
    <string name="close_drawer">Fechar</string>
    <string name="lbl_nome">Nome: %1$s</string>
    <string name="lbl_image">Image</string>
    <string name="lbl_descricao">Descrição: %1$s</string>
    <string name="lbl_quantidade">Quantidade: %1$s</string>
    <string name="lbl_id_produto">Id do Produto: %1$s</string>
    <string name="lbl_categoria">Categoria: %1$s</string>
    <string name="lbl_preco">Preço: %1$s</string>
    <string name="copyright">© App Crud 2018</string>
</resources>
