<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:theme="@style/AppTheme"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/lbl_image" />

    <EditText
        android:id="@+id/name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:textColor="@color/lbl_item_detail"
        android:layout_margin="20dp"
        android:inputType="text"
        android:importantForAutofill="no"
        tools:targetApi="o"
        android:hint="@string/lbl_nome"/>

    <EditText
        android:id="@+id/description"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/lbl_item_detail"
        android:layout_margin="20dp"
        android:inputType="text"
        android:importantForAutofill="no"
        tools:targetApi="o"
        android:hint="@string/lbl_descricao"/>

    <EditText
        android:id="@+id/amount"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/lbl_item_detail"
        android:layout_margin="20dp"
        android:inputType="number"
        android:importantForAutofill="no"
        tools:targetApi="o"
        android:hint="@string/lbl_quantidade"/>

    <EditText
        android:id="@+id/idProduct"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/lbl_item_detail"
        android:layout_margin="20dp"
        android:inputType="number"
        android:importantForAutofill="no"
        tools:targetApi="o"
        android:hint="@string/lbl_id_produto"/>

    <EditText
        android:id="@+id/category"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/lbl_item_detail"
        android:layout_margin="20dp"
        android:inputType="text"
        android:importantForAutofill="no"
        tools:targetApi="o"
        android:hint="@string/lbl_categoria"/>

    <EditText
        android:id="@+id/price"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/lbl_item_detail"
        android:layout_margin="20dp"
        android:inputType="number"
        android:importantForAutofill="no"
        tools:targetApi="o"
        android:hint="@string/lbl_preco"/>

</LinearLayout>