<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:theme="@style/AppTheme"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center_horizontal"
        android:contentDescription="@string/lbl_image" />

    <TextView
        android:id="@+id/name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:textColor="@color/lbl_item_detail"
        android:layout_margin="10dp" />

    <TextView
        android:id="@+id/description"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/lbl_item_detail"
        android:layout_margin="10dp" />

    <TextView
        android:id="@+id/amount"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/lbl_item_detail"
        android:layout_margin="10dp" />

    <TextView
        android:id="@+id/idProduct"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/lbl_item_detail"
        android:layout_margin="10dp" />

    <TextView
        android:id="@+id/category"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/lbl_item_detail"
        android:layout_margin="10dp" />

    <TextView
        android:id="@+id/price"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/lbl_item_detail"
        android:layout_margin="10dp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/body_nav"
            android:text="@string/btn_edit"
            android:textColor="@color/btn_text_niagara"
            android:layout_marginRight="20dp"
            android:layout_margin="10dp"/>

        <Button
            android:id="@+id/btn_delete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/body_nav"
            android:text="@string/btn_delete"
            android:textColor="@color/btn_text_niagara"
            android:layout_marginLeft="20dp"
            android:layout_margin="10dp"/>

    </LinearLayout>
</LinearLayout>